toolchain/internal/core/analysis/testdata/errors/naming/field_not_camel.vdl
// @expect: E102

type User {
  UserId string
}
